--- a/CameraControl/DSLRPCToolSub/Controles/TurnTableControl.xaml
+++ b/CameraControl/DSLRPCToolSub/Controles/TurnTableControl.xaml
@@ -501,7 +501,7 @@
                 </StackPanel>
             </Grid>
 
-            <Grid Grid.Row="10">
+            <Grid Grid.Row="10" IsEnabled="{Binding IsFrameSettingsEnable}">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -538,7 +538,8 @@
                     <Button x:Name="btn_AngleNext" Style="{StaticResource Plus}" Margin="0,0,15,0" Width="20" Height="20" Background="Transparent" Command="{Binding Cmb_NextValue}" CommandParameter="Angle_Next" />
                 </StackPanel>
 
-                <StackPanel Grid.Row="5" Orientation="Vertical" Margin="15,10,0,-3" VerticalAlignment="Top" HorizontalAlignment="Left" Visibility="{Binding IsDomeMode, Converter={StaticResource BooleanToVisibilityConverter1}}">
+                <StackPanel Grid.Row="5" Orientation="Vertical" Margin="15,10,0,-3" VerticalAlignment="Top" HorizontalAlignment="Left" Visibility="Visible">
+                    <!--{Binding IsDomeMode, Converter={StaticResource BooleanToVisibilityConverter1}}-->
                     <Label Content="Speed" FontSize="9" FontWeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="DarkGray"/>
                 </StackPanel>
 
